--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <p>55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <q>In fact, Jim Halpert once said this about beets, "Fact, bears eat beets. Bears, beets, Battlestar Galactica."</q>
+    <blockquote cite="I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets."></blockquote>
+    <cite>-Chris Pratt</cite>
   </main>
 </body>
 </html>
