--- a/index.html
+++ b/index.html
@@ -26,6 +26,33 @@
     <q>In fact, Jim Halpert once said this about beets, "Fact, bears eat beets. Bears, beets, Battlestar Galactica."</q>
     <blockquote cite="I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets."></blockquote>
     <cite>-Chris Pratt</cite>
+    <h2>Common varieties</h2>
+    <ol>
+      <li>Albino</li>
+      <li>Bull's Blood</li>
+      <li>Chioggia</li>
+      <li>Detroit Dark Red</li>
+      <li>Early Wonder</li>
+    </ol>
+    <h2>Nutritional information</h2>
+      <p>Serving size: 100 g</p>
+      <dl class="nutrition">
+        <data value="Energy: 180 kJ"></data>
+        <data value="Carbohydrates: 9.96 g"></data>
+        <data value="Fat: 0.18 g"></data>
+        <data value="Protein: 1.68 g"></data>
+      </dl>
+    <h2>Tags</h2>
+    <aside>
+      <ul>
+        <li>Crimson</li>
+        <li>Awesome</li>
+        <li>Pickle-able</li>
+        <li>Vegetable!</li>
+        <li>Delicious</li>
+      </ul>
+    </aside>
   </main>
+  <footer>Source: Wikipedia; Last modified: Aug 30, 2014</footer>
 </body>
 </html>
