--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title></title>
+  <title>Content Semantics</title>
 </head>
 <body>
   <header>
     <h1>Beetroot (Beta vulgaris)</h1>
     <nav>
       <ol>
-        <a href="Common varieties"></a>
-        <a href="Nutritional information"></a>
-        <a href="Tags"></a>
+        <li>Common varieties</li>
+        <li>Nutritional information</li>
+        <li>Tags</li>
       </ol>
     </nav>
   </header>
