--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <p>55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <q>In fact, Jim Halpert once said this about beets, "Fact, bears eat beets. Bears, beets, Battlestar Galactica."</q>
-    <blockquote cite="I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets."></blockquote>
-    <cite>-Chris Pratt</cite>
+    <p>"I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets."></p>
+    <cite>Chris Pratt</cite>
     <h2>Common varieties</h2>
     <ol>
       <li>Albino</li>
@@ -37,10 +37,10 @@
     <h2>Nutritional information</h2>
       <p>Serving size: 100 g</p>
       <dl class="nutrition">
-        <data value="Energy: 180 kJ"></data>
-        <data value="Carbohydrates: 9.96 g"></data>
-        <data value="Fat: 0.18 g"></data>
-        <data value="Protein: 1.68 g"></data>
+        <li>Energy: 180 kJ></li>
+        <li>Carbohydrates: 9.96 g></li>
+        <li>Fat: 0.18 g></li>
+        <li>Protein: 1.68 g></li>
       </dl>
     <h2>Tags</h2>
     <aside>
