Change list order

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <h2>Nutritional information</h2>
       <p>Serving size: 100 g</p>
       <dl class="nutrition">
-        <li>Energy: 180 kJ></li>
-        <li>Carbohydrates: 9.96 g></li>
-        <li>Fat: 0.18 g></li>
-        <li>Protein: 1.68 g></li>
+        <dd>Energy: 180 kJ></dd>
+        <dd>Carbohydrates: 9.96 g></dd>
+        <dd>Fat: 0.18 g></dd>
+        <dd>Protein: 1.68 g></dd>
       </dl>
     <h2>Tags</h2>
     <aside>
