Change class nutrition

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <h2>Nutritional information</h2>
       <p>Serving size: 100 g</p>
       <dl class="nutrition">
-        <dd>Energy: 180 kJ></dd>
-        <dd>Carbohydrates: 9.96 g></dd>
-        <dd>Fat: 0.18 g></dd>
-        <dd>Protein: 1.68 g></dd>
+        <dt>Energy: 180 kJ></dt>
+        <dt>Carbohydrates: 9.96 g></dt>
+        <dt>Fat: 0.18 g></dt>
+        <dt>Protein: 1.68 g></dt>
       </dl>
     <h2>Tags</h2>
     <aside>
