Fix nutrition info

--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
     <h2>Nutritional information</h2>
       <p>Serving size: 100 g</p>
       <dl class="nutrition">
-        <dt>Energy: 180 kJ></dt>
-        <dt>Carbohydrates: 9.96 g></dt>
-        <dt>Fat: 0.18 g></dt>
-        <dt>Protein: 1.68 g></dt>
+        <dt>Energy:></dt>
+        <dd><data value="180">180 kJ</data><dd>
+        <dt>Carbohydrates:></dt>
+        <dd><data value="9.96">9.96 g</data><dd>
+        <dt>Fat:></dt>
+        <dd><data value="0.18">0.18 g</data><dd>
+        <dt>Protein:></dt>
+        <dd><data value="1.68">1.68 g</data><dd>
       </dl>
     <h2>Tags</h2>
     <aside>
