--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <p>Serving size: 100 g</p>
       <dl class="nutrition">
         <dt>Energy:></dt>
-        <dd><data value="180">180 kJ</data><dd>
+        <dd><data value="180">180 kJ</data></dd>
         <dt>Carbohydrates:></dt>
-        <dd><data value="9.96">9.96 g</data><dd>
+        <dd><data value="9.96">9.96 g</data></dd>
         <dt>Fat:></dt>
-        <dd><data value="0.18">0.18 g</data><dd>
+        <dd><data value="0.18">0.18 g</data></dd>
         <dt>Protein:></dt>
-        <dd><data value="1.68">1.68 g</data><dd>
+        <dd><data value="1.68">1.68 g</data></dd>
       </dl>
     <h2>Tags</h2>
     <aside>
