--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
   </figure>
   <main>
-    <p>55 to 65 days are needed from germination to harvest of the root.</p>
-    <p>The usually deep purple roots of beetroot are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
-    <q>In fact, Jim Halpert once said this about beets, "Fact, bears eat beets. Bears, beets, Battlestar Galactica."</q>
-    <p>"I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets."></p>
+    <p><time>55 to 65 days</time> are needed from germination to harvest of the root.</p>
+    <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+    <p><q>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica.</i>"</q></p>
+    <p><blockquote>"I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets."></blockquote></p>
     <cite>Chris Pratt</cite>
     <h2>Common varieties</h2>
     <ol>
