--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Beetroot (Beta vulgaris)</h1>
+    <h1>Beetroot <i>(Beta vulgaris)</i></h1>
     <nav>
       <ol>
         <li>Common varieties</li>
@@ -24,7 +24,7 @@
     <p><time>55 to 65 days</time> are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p><q>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica.</i>"</q></p>
-    <p><blockquote>"I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets."></blockquote></p>
+    <p><blockquote>"I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets."></blockquote></p>
     <cite>Chris Pratt</cite>
     <h2>Common varieties</h2>
     <ol>
