--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
   </figure>
   <main>
-    <p><time>55 to 65 days</time> are needed from germination to harvest of the root.</p>
+    <p>55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p><q>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica.</i>"</q></p>
-    <p><blockquote>"I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets."></blockquote></p>
+    <p><blockquote>"I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets."</blockquote></p>
     <cite>Chris Pratt</cite>
     <h2>Common varieties</h2>
     <ol>
@@ -57,6 +57,6 @@
       </ul>
     </aside>
   </main>
-  <footer>Source: Wikipedia; Last modified: Aug 30, 2014</footer>
+  <footer><p><small>Source: <a href="Wikipedia"> Wikipedia</a>; Last modified: Aug 30, 2014</small></p></footer>
 </body>
 </html>
