Fix footer and quotes

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     <p>55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p><q>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica.</i>"</q></p>
-    <p><blockquote>"I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets."</blockquote></p>
-    <cite>Chris Pratt</cite>
+    <blockquote>
+      <p>"I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets."</p>
+    </blockquote>
+    <cite>
+      <p>Chris Pratt</p>
+    </cite>
     <h2>Common varieties</h2>
     <ol>
       <li>Albino</li>
@@ -57,6 +61,8 @@
       </ul>
     </aside>
   </main>
-  <footer><p><small>Source: <a href="Wikipedia"> Wikipedia</a>; Last modified: Aug 30, 2014</small></p></footer>
+  <footer>
+    <p><small>Source: <a href="Wikipedia"> Wikipedia</a>; Last modified: Aug 30, 2014</small></p>
+  </footer>
 </body>
 </html>
